# Portfolio-Tracker

./: .env.example  .gitignore  A_List_of_Valid_Licences.bas  B_Licencing_Checks.bas  CLAUDE.md  C_Retrieve_Folder_Locations.bas  DEPLOYMENT.md  D_Import_Data.bas  E_ColumnConstants.bas  F_Summary_Tab_Setup.bas  G_Create_Strategy_Tab.bas  H_Open_Code_Tab.bas  INSTALL.md  I_MISC.bas  J_Portfolio_Setup.bas  K2_MonteCarlo_Enhanced.bas  K_MonteCarlo.bas  K_MonteCarlov2.bas  L_Correlations.bas  M_Margin_Tracking.bas  Module1.bas  N_BackTest.bas  O_Strategies_Tab.bas  P_Long_File_Path.bas  Portfolio Tracker - A Tool for MultiWalk v1.24.xlsb  Q_Export_Import_Settings.bas  README.md  R_Check_New_Strategies.bas  S_LeaveOneOut.bas  Strat 1.xlsx  T_Diversificator.bas  ThisWorkbook.cls  U_BackTest_Eligibility.bas  V_PositionCheck.bas  W_Markets.bas  X_PortfolioHistory.bas  Z_Debugging_Modules.bas  Z_ExportFixtures.bas  app.py  build_windows.bat  (+10 more)
v2/: app.py  build_windows.bat  pyproject.toml  requirements.txt
v2/.streamlit/: config.toml  secrets.toml.example
v2/auth/: supabase_client.py
v2/config/: default_settings.yaml
v2/core/: config.py  data_types.py
v2/core/analytics/: atr.py  correlations.py  leave_one_out.py  margin.py  monte_carlo.py
v2/core/data/: contract_registry.py
v2/core/ingestion/: csv_importer.py  date_utils.py  folder_scanner.py  walkforward_reader.py  xlsb_importer.py
v2/core/licensing/: license_manager.py
v2/core/portfolio/: aggregator.py  optimizer.py  (+3 more)
v2/ui/: landing.py  plan_gate.py  pricing.py  strategy_labels.py  styles.py  workflow.py
(+112 files in other folders)
